--- a/burgerQueen/burgerQueen/tsconfig.app.json
+++ b/burgerQueen/burgerQueen/tsconfig.app.json
@@ -2,7 +2,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/abouUs",
+    "outDir": "./out-tsc/app",
     "types": []
   },
   "files": [
