--- a/burgerQueen/package.json
+++ b/burgerQueen/package.json
@@ -24,7 +24,8 @@
     "firebase": "^9.6.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "rxfire": "^6.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.2",
