--- a/burgerQueen/package.json
+++ b/burgerQueen/package.json
@@ -22,10 +22,11 @@
     "@firebase/app": "^0.7.17",
     "@firebase/auth": "^0.19.9",
     "firebase": "^9.6.7",
+    "firebase-admin": "^10.0.2",
+    "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "rxfire": "^6.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.2",
