--- a/burgerQueen/package.json
+++ b/burgerQueen/package.json
@@ -46,6 +46,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-teamcity-reporter": "^1.1.0",
     "schematics-scss-migrate": "^1.3.14",
     "typescript": "~4.5.2"
   }
